charts/ingress-autodeployrelease-new-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: autodeployrelease-new
    meta.helm.sh/release-namespace: autodeploy-new
  creationTimestamp: "2025-03-01T01:32:35Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: autodeployrelease-new-ingress
  namespace: autodeploy-new
  resourceVersion: "1991708"
  uid: 0b60ab1f-b40e-4b84-a877-ab75ef8f8040
spec:
  ingressClassName: nginx
  rules:
  - host: autodeploydemoapp.local
    http:
      paths:
      - backend:
          service:
            name: autodeployrelease-new-webapi-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - autodeploydemoapp.local
    secretName: autodeployrelease-new-tls
status:
  loadBalancer:
    ingress:
    - ip: 10.96.23.222
